--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 .wrapper {
   margin: auto;
   width: 43%;
+  border: 10px solid slategray;
   background-color: black;
   color: white;
 }
